--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 .wwebjs_auth
 # Logs
 *.log
-/logs/source/*.json
-!/logs/source/
+logs/source/*.json
+!logs/source/
 
 npm-debug.log*
 yarn-debug.log*
