--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "convert-excel-to-json": "^1.7.0",
     "dotenv": "^16.5.0",
+    "googleapis": "^148.0.0",
     "qrcode-terminal": "^0.12.0",
     "read-excel-file": "^5.8.7",
     "whatsapp-web.js": "^1.27.0"
