--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ FORMAT_T1 = 'Selamat siang berdasarkan catatan pembukuan BUMDes Bersama Pangkala
 FORMAT_T2 = 'Selamat siang berdasarkan catatan pembukuan BUMDes Bersama Pangkalan Lada Makmur kelompok spp {kelompok} Desa {desa} Memiliki tagihan sebesar {tunggakan_total} Sudah terlambat dari jatuh tempo seharusnya bulan {last_due_month} Tahun {last_due_year}, mohon segera selesaikan pembayaran.'
 FORMAT_AR = 'Terimakasih,{enter}ini merupakan pesan otomatis segera lakukan konfirmasi dengan petugas BUMDes Bersama Pangkalan Lada Makmur.'
 
+GKFP = 
 DELAY_AR = 7000
 DELAY_NTMIN = 15000
 DELAY_NTMAX = 30000
